--- a/requirements.txt
+++ b/requirements.txt
@@ -14,12 +14,12 @@ python-dotenv==1.0.0
 gunicorn==21.2.0
 psycopg2-binary==2.9.6
 whitenoise==6.5.0
+dj-database-url==2.0.0
 gTTS==2.3.2
 pydub==0.25.1
 qrcode==7.4.2
 python-docx==0.8.11
 PyPDF2==3.0.1
 openpyxl==3.1.2
-Pillow==10.0.0
 fuzzywuzzy==0.18.0
 python-Levenshtein==0.21.1
