--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ gunicorn==21.2.0
 psycopg2-binary==2.9.6
 whitenoise==6.5.0
 dj-database-url==2.0.0
+nltk==3.8.1
 gTTS==2.3.2
 qrcode==7.4.2
 python-docx==0.8.11
