--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ psycopg2-binary==2.9.6
 whitenoise==6.5.0
 dj-database-url==2.0.0
 nltk==3.8.1
+transformers==4.30.0
+torch==2.0.0
 gTTS==2.3.2
 qrcode==7.4.2
 python-docx==0.8.11
@@ -16,3 +18,4 @@ PyPDF2==3.0.1
 openpyxl==3.1.2
 fuzzywuzzy==0.18.0
 python-Levenshtein==0.21.1
+textstat==0.7.3
